--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Simple HTML Page</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>File Upload Form</title>
 </head>
 <body>
-
-    <h1>Hello, World!</h1>
-
-    <p>This is a simple HTML page.</p>
-
+  <h1>File Upload Form</h1>
+  <form action="/upload" method="post" enctype="multipart/form-data">
+    <input type="file" name="file" accept=".txt, .pdf, .doc">
+    <button type="submit">Upload File</button>
+  </form>
 </body>
 </html>
