--- a/index.html
+++ b/index.html
@@ -1,15 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>File Upload Form</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Text to Video Generator</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            background-color: #f0f0f0;
+            margin: 0;
+        }
+        textarea {
+            padding: 10px;
+            width: 80%;
+            height: 100px;
+            margin-bottom: 20px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        button {
+            padding: 10px 20px;
+            background-color: #28a745;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #218838;
+        }
+        #videoContainer {
+            margin-top: 20px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        video {
+            width: 80%;
+            height: auto;
+            margin: 10px 0;
+            border: 2px solid #ccc;
+            border-radius: 10px;
+        }
+    </style>
 </head>
 <body>
-  <h1>File Upload Form</h1>
-  <form action="/upload" method="post" enctype="multipart/form-data">
-    <input type="file" name="file" accept=".txt, .pdf, .doc">
-    <button type="submit">Upload File</button>
-  </form>
+
+    <h1>Text to Video Generator</h1>
+    <textarea id="inputText" placeholder="Enter your text here..."></textarea>
+    <button id="generateBtn">Generate Video Clips</button>
+
+    <div id="videoContainer"></div>
+
+    <script>
+        const inputText = document.getElementById('inputText');
+        const generateBtn = document.getElementById('generateBtn');
+        const videoContainer = document.getElementById('videoContainer');
+
+        generateBtn.addEventListener('click', async () => {
+            const text = inputText.value;
+            if (text) {
+                const words = text.split(/\s+/);
+                const videoUrls = [];
+
+                for (let i = 0; i < words.length; i += 5) { // Grouping words
+                    const query = words.slice(i, i + 5).join(' ');
+                    const urls = await fetchVideos(query);
+                    videoUrls.push(...urls);
+                }
+
+                displayVideos(videoUrls);
+            } else {
+                alert('Please enter some text.');
+            }
+        });
+
+        async function fetchVideos(query) {
+            try {
+                const response = await fetch(`https://api.pexels.com/videos/search?query=${encodeURIComponent(query)}`, {
+                    headers: {
+                        Authorization: 'mPGRiwahlRDNvW42u23NQIIKHZEmtB5W7|dgCGcNWUXvzQOYaUvdbPYJ'
+                    }
+                });
+
+                if (!response.ok) {
+                    throw new Error('Network response was not ok ' + response.statusText);
+                }
+
+                const data = await response.json();
+                const videoLinks = data.videos.map(video => video.video_files[0].link); // Adjust to select desired video file
+                return videoLinks;
+            } catch (error) {
+                console.error('Error fetching videos:', error);
+                alert('Failed to fetch videos. Please try again later.');
+                return []; // Return an empty array on error
+            }
+        }
+
+        function displayVideos(videoUrls) {
+            videoContainer.innerHTML = ''; // Clear previous videos
+            videoUrls.forEach(url => {
+                const videoElement = document.createElement('video');
+                videoElement.src = url;
+                videoElement.controls = true;
+                videoElement.autoplay = false;
+                videoElement.muted = true;
+                videoElement.load();
+
+                videoContainer.appendChild(videoElement);
+            });
+        }
+    </script>
 </body>
 </html>
