--- a/index.html
+++ b/index.html
@@ -47,6 +47,20 @@
             border: 2px solid #ccc;
             border-radius: 10px;
         }
+        .text-overlay {
+            position: absolute;
+            bottom: 10px;
+            left: 10px;
+            background-color: rgba(0, 0, 0, 0.5);
+            color: white;
+            padding: 10px;
+            font-size: 18px;
+            border-radius: 5px;
+        }
+        .video-wrapper {
+            position: relative;
+            display: inline-block;
+        }
     </style>
 </head>
 <body>
@@ -74,7 +88,7 @@
                     videoUrls.push(...urls);
                 }
 
-                displayVideos(videoUrls);
+                displayVideos(videoUrls, text);
             } else {
                 alert('Please enter some text.');
             }
@@ -84,7 +98,7 @@
             try {
                 const response = await fetch(`https://api.pexels.com/videos/search?query=${encodeURIComponent(query)}`, {
                     headers: {
-                        Authorization: 'mPGRiwahlRDNvW42u23NQIIKHZEmtB5W7|dgCGcNWUXvzQOYaUvdbPYJ'
+                        Authorization: 'mPGRiwahlRDNvW42u23NQIIKHZEmtB5W7|dgCGcNWUXvzQOYaUvdbPYJ' // Replace with your actual Pexels API Key
                     }
                 });
 
@@ -102,9 +116,13 @@
             }
         }
 
-        function displayVideos(videoUrls) {
+        function displayVideos(videoUrls, providedText) {
             videoContainer.innerHTML = ''; // Clear previous videos
             videoUrls.forEach(url => {
+                // Create a wrapper div for the video and text overlay
+                const wrapper = document.createElement('div');
+                wrapper.classList.add('video-wrapper');
+
                 const videoElement = document.createElement('video');
                 videoElement.src = url;
                 videoElement.controls = true;
@@ -112,7 +130,15 @@
                 videoElement.muted = true;
                 videoElement.load();
 
-                videoContainer.appendChild(videoElement);
+                // Create text overlay
+                const textOverlay = document.createElement('div');
+                textOverlay.classList.add('text-overlay');
+                textOverlay.textContent = providedText;
+
+                wrapper.appendChild(videoElement);
+                wrapper.appendChild(textOverlay);
+
+                videoContainer.appendChild(wrapper);
             });
         }
     </script>
